fixing statistics
